# coven-reach

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  protocol.rs  security.rs
src/tools/: familiar.rs  find.rs  list.rs  mod.rs  read.rs  secret_check.rs  write.rs
tests/: integration.rs
